--- a/app/android/TicTacToe/res/values/strings.xml
+++ b/app/android/TicTacToe/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="restart_game">Restart</string>
+    <string name="button_text_color">#FFFFFF</string>
+    <string name="button_shadow_color">#000000</string>
 
 </resources>
