--- a/app/android/TicTacToe/res/values/strings.xml
+++ b/app/android/TicTacToe/res/values/strings.xml
@@ -9,5 +9,8 @@
     <string name="button_shadow_color">#000000</string>
     <string name="button_3x3">3x3</string>
     <string name="button_5x5">5x5</string>
+    <string name="x_wins">X wins</string>
+    <string name="o_wins">O wins</string>
+    <string name="game_draw">Draw</string>
 
 </resources>
