--- a/app/android/TicTacToe/res/values/strings.xml
+++ b/app/android/TicTacToe/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
 
-    <string name="app_name">TicTacToe</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="menu_settings">Settings</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="app_name">Tic Tac Toe Classic</string>
+    <string name="background_desc">Background Image</string>
+    <string name="segment_separator_desc">Segment Separator</string>
+    <string name="title_activity_main">Tic Tac Toe Classic</string>
     <string name="restart_game">Restart</string>
     <string name="button_text_color">#FFFFFF</string>
     <string name="button_shadow_color">#000000</string>
